syntax = "proto3";
package pb;

option go_package ="../pb";

message Config{
  string  name = 1;
  string info=2;
}

message calculateParams{
  int64  param1=1;
  int64 param2=2;
}

message Result{
  int64 result =1;
}